# onnx-llama3-cxx

./: .gitignore  Dockerfile  docker-compose.yml  readme.md
src/: CMakeLists.txt  chat.cpp  chat.hpp  cli.cpp  dev.sh
