cmake_minimum_required(VERSION 3.10)
project(chat_interface)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(ONNXRUNTIME_NAME $ENV{ONNXRUNTIME_NAME})
set(ONNXRUNTIME_GENAI_NAME $ENV{ONNXRUNTIME_GENAI_NAME})

set(ONNXRUNTIME_DIR "${CMAKE_CURRENT_SOURCE_DIR}/runtime/${ONNXRUNTIME_NAME}")
set(ONNXRUNTIME_GENAI_DIR "${CMAKE_CURRENT_SOURCE_DIR}/runtime/${ONNXRUNTIME_GENAI_NAME}")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

include_directories(
    "${ONNXRUNTIME_DIR}/include"
    "${ONNXRUNTIME_GENAI_DIR}/include"
)

link_directories(
    "${ONNXRUNTIME_DIR}/lib"
    "${ONNXRUNTIME_GENAI_DIR}/lib"
)

set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

list(APPEND CMAKE_INSTALL_RPATH 
    "${ONNXRUNTIME_DIR}/lib"
    "${ONNXRUNTIME_GENAI_DIR}/lib"
)

file(GLOB SOURCES "*.cpp")
add_executable(cli ${SOURCES})

set_target_properties(cli PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
    BUILD_WITH_INSTALL_RPATH TRUE
    INSTALL_RPATH "${ONNXRUNTIME_DIR}/lib;${ONNXRUNTIME_GENAI_DIR}/lib"
)

target_link_libraries(cli PRIVATE
    "${ONNXRUNTIME_DIR}/lib/libonnxruntime.so"
    "${ONNXRUNTIME_GENAI_DIR}/lib/libonnxruntime-genai.so"
)
